--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and fill in the values
 
 # Backend API URL
-REACT_APP_API_URL=https://coachsaasproject-kab5.onrender.com/api
+REACT_APP_BACKEND_URL=https://coachingsolution.onrender.com/api
 
 # App Settings
 REACT_APP_NAME=Coaching Management System
